    Reported by: Chris dot Nelson at SIXNET dot com 
    Fixed by: Bas van der Vlies

 * Changed all 'str =' assignments to 's =' to solve conflicts with
   the builtin str function
   Fixed by: Bas van der Vlies

 * Python egg cache enviroment setting was ignored by email2trac. 
   closes #163
   Author: Dennis McRitchie ( dmcr at Princeton dot EDU )
   Applied by: Bas van der Vlies
   
 -- Bas van der Vlies <bas@sara.nl>  Thu, 22 Oct 2009 17:47:50 +0200

email2trac (1.0.0-1) stable; urgency=low

  * Implemented a new feature to drop the HTML version of multipart/alternative
    message part. Such a message part contains the same info. The info is sent
    in different formats and the client can decide which version to use.
    closes #30

    to enable in email2trac.conf:
        - drop_alternative_html_version: 1
 
    Implemented by: Bas van der Vlies

 -- Bas van der Vlies <basv@sara.nl>  Tue, 25 Aug 2009 11:50:40 +0200

email2trac (0.90-1) stable; urgency=low

  * updated aclocal.m4 to support python versions 2.5 and 2.6, closes #137
  * use the email addres in the reporter field, closes #136
  * Fixed an error in blog update function

    All Fixes by: Bas van der Vlies

  * if alternate notify template is set then also set ticket id. It will show
    up as ticket change, closes #142
    Reported by: hju att jochenkuhl dot de
    Fixed by: Bas van der Vlies

  * Error in urllib.quote(filename) could not handle unicode 
    filenames, closes #138
    
    Reported by: debacle at debian dot org
    Applied  by: Bas van der Vlies

  
  * Fixed an error when debug is on and the body message contains unicode
    strings, closes #144
    Reported by: trumbitta at gmail dot com
    Applied by: Bas van der Vlies

  * default trac version for email2trac is now updated to 0.11

 -- Bas van der Vlies <basv@sara.nl>  Thu, 04 Jun 2009 14:48:11 +0200

email2trac (0.80-1) stable; urgency=low

  * Fixed in parsing the reflow parameter, closes #123