@@ -17,7 +17,13 @@ email2trac (1.1.0-2) stable; urgency=low
    closes #163
    Author: Dennis McRitchie ( dmcr at Princeton dot EDU )
    Applied by: Bas van der Vlies
-   
+
+ * Disabled code so the following line will not be displayed anymore 
+   as comment in a ticket:
+     * This message has x attachment(s)
+   Suggested by: dereks at realloc dot net, closes ticket #165
+   Fixed by    : Bas van der Vlies
+
  -- Bas van der Vlies <bas@sara.nl>  Thu, 22 Oct 2009 17:47:50 +0200
 
 email2trac (1.0.0-1) stable; urgency=low
